framework/contracts/account/manager/tests/snapshots/subaccount__updating_on_subaccount_should_succeed-, ù¾w¢»{¿O¶wÄü8cCÚ¼´KêE.snap
---
source: contracts/account/manager/tests/subaccount.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 123
    - 53
    - 125
    - 115
    - 116
    - 97
    - 116
    - 101
  - - 123
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 34
    - 58
    - 91
    - 34
    - 92
    - 117
    - 48
    - 48
    - 49
    - 48
    - 195
    - 149
    - 38
    - 65
    - 63
    - 195
    - 134
    - 195
    - 135
    - 195
    - 176
    - 195
    - 166
    - 41
    - 195
    - 161
    - 195
    - 160
    - 112
    - 195
    - 164
    - 58
    - 194
    - 134
    - 94
    - 99
    - 195
    - 146
    - 195
    - 185
    - 104
    - 194
    - 149
    - 195
    - 154
    - 194
    - 177
    - 125
    - 194
    - 179
    - 194
    - 188
    - 194
    - 182
    - 195
    - 170
    - 64
    - 75
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 34
    - 93
    - 125
- - - 0
    - 123
    - 54
    - 125
    - 97
    - 110
    - 115
    - 95
    - 104
    - 111
    - 115
    - 116
  - - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
- - - 97
    - 99
    - 99
    - 95
    - 105
    - 100
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 50
    - 125
- - - 97
    - 100
    - 109
    - 105
    - 110
  - - 34
    - 92
    - 117
    - 48
    - 48
    - 49
    - 48
    - 195
    - 149
    - 38
    - 65
    - 63
    - 195
    - 134
    - 195
    - 135
    - 195
    - 176
    - 195
    - 166
    - 41
    - 195
    - 161
    - 195
    - 160
    - 112
    - 195
    - 164
    - 58
    - 194
    - 134
    - 94
    - 99
    - 195
    - 146
    - 195
    - 185
    - 104
    - 194
    - 149
    - 195
    - 154
    - 194
    - 177
    - 125
    - 194
    - 179
    - 194
    - 188
    - 194
    - 182
    - 195
    - 170
    - 64
    - 75
    - 92
    - 117
    - 48
    - 48
    - 48
    - 51
    - 34
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125

